--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -1,11 +1,11 @@
 [testServer]
-BROKER_HOST = 127.0.0.1
+BROKER_HOST = 192.168.1.9
 BROKER_PORT = 5672
 USER = test
-PASSWORD = test
+PASSWORD = 4321password
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
-;EXCHANGE_TYPE = ????
+;EXCHANGE_TYPE = topic
 AUTO_DELETE = true
 
