--- a/rabbitMQ_error.ini
+++ b/rabbitMQ_error.ini
@@ -1,11 +1,10 @@
 [testServer]
 BROKER_HOST = 192.168.1.12
 BROKER_PORT = 5672
-USER = test	
+USER = test
 PASSWORD = test
 VHOST = testhost
-EXCHANGE = dbexchange
-QUEUE = dbqueue
-;EXCHANGE_TYPE = topic
+EXCHANGE = errorexchange
+QUEUE = errorqueue
+#EXCHANGE_TYPE = topic
 AUTO_DELETE = true
-
